app dockerised with , postgre sql, grafana, prometheus metrics, performance tests, code coverage