@@ -5,21 +5,24 @@ import com.recipe.model.domain.response.CreateEntityResponse;
 import com.recipe.model.domain.response.IngredientResponse;
 import com.recipe.model.entity.Ingredient;
 import com.recipe.service.IngredientService;
-import io.swagger.annotations.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Api(value = "IngredientController", tags = "Ingredient Controller", description = "Create, update, delete, list ingredients")
+@Tag(name = "IngredientController", description = "Create, update, delete, list ingredients")
 @RestController
-@RequestMapping(value = "ingredient")
+@RequestMapping(value = "/api/v1/ingredient")
 public class IngredientController {
 
     private final Logger logger = LoggerFactory.getLogger(IngredientController.class);
@@ -31,9 +34,9 @@ public class IngredientController {
         this.ingredientService = ingredientService;
     }
 
-    @ApiOperation(value = "List all ingredients")
+    @Operation(summary = "List all ingredients")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful request"),
+            @ApiResponse(responseCode = "200", description = "Successful request"),
     })
     @RequestMapping(method = RequestMethod.GET, path = "/page/{page}/size/{size}")
     public List<IngredientResponse> getIngredientList(@PathVariable(name = "page") int page,
@@ -41,46 +44,45 @@ public class IngredientController {
         logger.info("Getting the ingredients");
         List<Ingredient> list = ingredientService.getIngredientsByPageAndSize(page, size);
 
-        return list
-                .stream()
+        return list.stream()
                 .map(IngredientResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @ApiOperation(value = "List one ingredient by its ID")
+    @Operation(summary = "List one ingredient by its ID")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful request"),
-            @ApiResponse(code = 404, message = "Ingredient not found by the given ID")
+            @ApiResponse(responseCode = "200", description = "Successful request"),
+            @ApiResponse(responseCode = "404", description = "Ingredient not found by the given ID")
     })
     @RequestMapping(value = "/{id}", method = RequestMethod.GET)
-    public IngredientResponse getIngredient(@ApiParam(value = "Ingredient ID", required = true) @PathVariable(name = "id") Integer id) {
+    public IngredientResponse getIngredient(@Parameter(description = "Ingredient ID") @PathVariable(name = "id") Integer id) {
         logger.info("Getting the ingredient by its id. Id: {}", id);
         Ingredient ingredient = ingredientService.findById(id);
         return new IngredientResponse(ingredient);
     }
 
-    @ApiOperation(value = "Create an ingredient")
+    @Operation(summary = "Create an ingredient")
     @ApiResponses(value = {
-            @ApiResponse(code = 201, message = "Ingredient created"),
-            @ApiResponse(code = 400, message = "Bad input")
+            @ApiResponse(responseCode = "201", description = "Ingredient created"),
+            @ApiResponse(responseCode = "400", description = "Bad input")
     })
     @RequestMapping(method = RequestMethod.POST)
     @ResponseStatus(HttpStatus.CREATED)
     public CreateEntityResponse createIngredient(
-            @ApiParam(value = "Properties of the Ingredient", required = true) @Valid @RequestBody CreateIngredientRequest request) {
+            @Parameter(description = "Properties of the Ingredient") @Valid @RequestBody CreateIngredientRequest request) {
         logger.info("Creating the ingredient with properties");
         Integer id = ingredientService.create(request);
         return new CreateEntityResponse(id);
     }
 
-    @ApiOperation(value = "Delete the ingredient")
+    @Operation(summary = "Delete the ingredient")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful operation"),
-            @ApiResponse(code = 400, message = "Invalid input"),
-            @ApiResponse(code = 404, message = "Ingredient not found by the given ID")
+            @ApiResponse(responseCode = "200", description = "Successful operation"),
+            @ApiResponse(responseCode = "400", description = "Invalid input"),
+            @ApiResponse(responseCode = "404", description = "Ingredient not found by the given ID")
     })
     @RequestMapping(method = RequestMethod.DELETE)
-    public void deleteIngredient(@ApiParam(value = "ingredient ID", required = true) @NotNull(message = "{id.not.null}") @RequestParam(name = "id") Integer id) {
+    public void deleteIngredient(@Parameter(description = "ingredient ID") @NotNull(message = "{id.not.null}") @RequestParam(name = "id") Integer id) {
         logger.info("Deleting the ingredient by its id. Id: {}", id);
         ingredientService.deleteIngredient(id);
     }
