@@ -7,21 +7,24 @@ import com.recipe.model.domain.response.CreateEntityResponse;
 import com.recipe.model.domain.response.RecipeResponse;
 import com.recipe.model.entity.Recipe;
 import com.recipe.service.RecipeService;
-import io.swagger.annotations.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.Parameter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Api(value = "RecipeController", tags = "Recipe Controller", description = "Create, update, delete, list recipes")
+@Tag(name = "RecipeController", description = "Create, update, delete, list recipes")
 @RestController
-@RequestMapping(value = "recipe")
+@RequestMapping(value = "/api/v1/recipe")
 public class RecipeController {
     private final Logger logger = LoggerFactory.getLogger(RecipeController.class);
 
@@ -32,9 +35,9 @@ public class RecipeController {
         this.recipeService = recipeService;
     }
 
-    @ApiOperation(value = "List all recipes")
+    @Operation(summary = "List all recipes")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful request"),
+            @ApiResponse(responseCode = "200", description = "Successful request"),
     })
     @RequestMapping(method = RequestMethod.GET, path = "/page/{page}/size/{size}")
     public List<RecipeResponse> getRecipeList(@PathVariable(name = "page") int page,
@@ -44,70 +47,70 @@ public class RecipeController {
 
         return list.stream()
                 .map(RecipeResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @ApiOperation(value = "List one recipe by its ID", response = RecipeResponse.class)
+    @Operation(summary = "List one recipe by its ID")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful request"),
-            @ApiResponse(code = 404, message = "Recipe not found by the given ID")
+            @ApiResponse(responseCode = "200", description = "Successful request"),
+            @ApiResponse(responseCode = "404", description = "Recipe not found by the given ID")
     })
     @RequestMapping(value = "/{id}", method = RequestMethod.GET)
-    public RecipeResponse getRecipe(@ApiParam(value = "Recipe ID", required = true) @PathVariable(name = "id") Integer id) {
+    public RecipeResponse getRecipe(@Parameter(description = "Recipe ID") @PathVariable(name = "id") Integer id) {
         logger.info("Getting the recipe by its id. Id: {}", id);
         Recipe recipe = recipeService.getRecipeById(id);
         return new RecipeResponse(recipe);
     }
 
-    @ApiOperation(value = "Create a recipe")
+    @Operation(summary = "Create a recipe")
     @ApiResponses(value = {
-            @ApiResponse(code = 201, message = "Recipe created"),
-            @ApiResponse(code = 400, message = "Bad input")
+            @ApiResponse(responseCode = "201", description = "Recipe created"),
+            @ApiResponse(responseCode = "400", description = "Bad input")
     })
     @RequestMapping(method = RequestMethod.POST)
     @ResponseStatus(HttpStatus.CREATED)
     public CreateEntityResponse createRecipe(
-            @ApiParam(value = "Properties of the recipe", required = true) @Valid @RequestBody CreateRecipeRequest request) {
+            @Parameter(description = "Properties of the recipe") @Valid @RequestBody CreateRecipeRequest request) {
         logger.info("Creating the recipe with properties");
         Integer id = recipeService.createRecipe(request);
         return new CreateEntityResponse(id);
     }
 
-    @ApiOperation(value = "Update the recipe")
+    @Operation(summary = "Update the recipe")
     @ApiResponses(value = {
-            @ApiResponse(code = 201, message = "Ingredient created"),
-            @ApiResponse(code = 400, message = "Bad input")
+            @ApiResponse(responseCode = "200", description = "Recipe updated"),
+            @ApiResponse(responseCode = "400", description = "Bad input")
     })
     @RequestMapping(method = RequestMethod.PATCH)
     public void updateRecipe(
-            @ApiParam(value = "Properties of the recipe", required = true) @Valid @RequestBody UpdateRecipeRequest updateRecipeRequest) {
+            @Parameter(description = "Properties of the recipe") @Valid @RequestBody UpdateRecipeRequest updateRecipeRequest) {
         logger.info("Updating the recipe by given properties");
         recipeService.updateRecipe(updateRecipeRequest);
     }
 
-    @ApiOperation(value = "Delete the recipe")
+    @Operation(summary = "Delete the recipe")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful operation"),
-            @ApiResponse(code = 400, message = "Invalid input"),
-            @ApiResponse(code = 404, message = "Recipe not found by the given ID")
+            @ApiResponse(responseCode = "200", description = "Successful operation"),
+            @ApiResponse(responseCode = "400", description = "Invalid input"),
+            @ApiResponse(responseCode = "404", description = "Recipe not found by the given ID")
     })
     @RequestMapping(method = RequestMethod.DELETE)
     public void deleteRecipe(
-            @ApiParam(value = "Recipe ID", required = true) @NotNull(message = "{id.not.null}") @RequestParam(name = "id") Integer id) {
+            @Parameter(description = "Recipe ID") @NotNull(message = "{id.not.null}") @RequestParam(name = "id") Integer id) {
         logger.info("Deleting the recipe by its id. Id: {}", id);
         recipeService.deleteRecipe(id);
     }
 
-    @ApiOperation(value = "Search recipes by given parameters")
+    @Operation(summary = "Search recipes by given parameters")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful request"),
-            @ApiResponse(code = 404, message = "Different error messages related to criteria and recipe")
+            @ApiResponse(responseCode = "200", description = "Successful request"),
+            @ApiResponse(responseCode = "404", description = "Different error messages related to criteria and recipe")
 
     })
     @RequestMapping(method = RequestMethod.POST, path = "/search")
     public List<RecipeResponse> searchRecipe(@RequestParam(name = "page", defaultValue = "0") int page,
                                              @RequestParam(name = "size", defaultValue = "10") int size,
-                                             @ApiParam(value = "Properties of the the search")
+                                             @Parameter(description = "Properties of the search")
                                              @RequestBody @Valid RecipeSearchRequest recipeSearchRequest) {
         logger.info("Searching the recipe by given criteria");
         return recipeService.findBySearchCriteria(recipeSearchRequest, page, size);
